2007-10-31  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/rectangle.ccg:
	* clutter/src/rectangle.hg: Wrap the Rectangle class

2007-10-31  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/stage.hg: add conversion so that Stage::get_default() returns
	a RefPtr<Stage> type

2007-10-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/clutter_vfuncs.defs:
	* clutter/src/stage.ccg:
	* clutter/src/stage.hg: added an initial wrapper for the Stage class.
	The get_default() function returns a RefPtr<Actor> instead of a
	RefPtr<Stage> since I'm not sure of the proper way to do the conversion, but
	otherwise, it should be mostly complete.

2007-10-29  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/box.hg: added HBox and VBox classes.  I decided against
	creating separate headers for each of these classes like the base clutter
	library does since they're so small, and I just put them all in box.h like
	we do in gtkmm.

2007-10-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/README: clean up a copy/paste error
	* added some more files to ignore

2007-10-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/group.ccg:
	* clutter/src/group.hg: add initial wrapper for ClutterGroup

2007-10-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm.h: cleaned up the one-include-to-rule-them-all so that
	it includes all of the header files created so far and so that it has proper
	copyright information.  Also removed some commented-out cruft

2007-10-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm.h: changed the #include guard from LIBGOOCANVASMM_H to
	LIBCLUTTERMM_H
	* clutter/src/clutter_vfuncs.defs: removed a whole bunch of goocanvasmm
	references

2007-10-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* examples/Makefile.am:
	* examples/README.txt: