@@ -1,5 +1,5 @@
-#ifndef _LIBGOOCANVASMM_WRAP_INIT_H
-#define _LIBGOOCANVASMM_WRAP_INIT_H
+#ifndef _LIBCLUTTERMM_WRAP_INIT_H
+#define _LIBCLUTTERMM_WRAP_INIT_H
 
 /* wrap_init.h
  *
@@ -22,11 +22,11 @@
 
 // wrap_init.cc is generated by tools/generate_wrap_init.pl
 
-namespace Goocanvas
+namespace Clutter
 {
 
 void wrap_init();
 
-} //namespace Goocanvas
+} //namespace Clutter
 
-#endif // _LIBGOOCANVASMM_WRAP_INIT_H
+#endif // _LIBCLUTTERMM_WRAP_INIT_H
