@@ -1,13 +1,13 @@
-#ifndef _LIBGDAMM_CONFIG_H
-#define _LIBGDAMM_CONFIG_H 1
+#ifndef _LIBCLUTTERMM_CONFIG_H
+#define _LIBCLUTTERMM_CONFIG_H 1
 
 #include "glibmmconfig.h"
 
 /* version numbers */
-#undef LIBGDAMM_MAJOR_VERSION
-#undef LIBGDAMM_MINOR_VERSION
-#undef LIBGDAMM_MICRO_VERSION
-#undef LIBGDAMM_VERSION
+#undef LIBCLUTTERMM_MAJOR_VERSION
+#undef LIBCLUTTERMM_MINOR_VERSION
+#undef LIBCLUTTERMM_MICRO_VERSION
+#undef LIBCLUTTERMM_VERSION
 
-#endif /* _LIBGDAMM_CONFIG_H */
+#endif /* _LIBCLUTTERMM_CONFIG_H */
 
